# test_several1

./: .gitignore  prod15.jsp  teste  teste.pub
trigger/25/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
trigger/25/alembic/: env.py
trigger/25/alembic/versions/: 001_initial_schema.py  002_contact_profile.py  003_lead_fields.py
trigger/25/app/: __init__.py  main.py
trigger/25/app/api/: __init__.py  deps.py  router.py
trigger/25/app/config/: settings.py
trigger/25/app/core/: __init__.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py
trigger/25/app/memory/: __init__.py  context_memory.py  redis_client.py
trigger/25/app/models/: __init__.py  conversation.py  message.py  user.py
trigger/25/app/prompts/: __init__.py  assistant.txt  comercial.txt  loader.py  personality.txt  system.txt
trigger/25/app/repositories/: __init__.py  base.py  conversation.py  message.py  user.py
trigger/25/app/schemas/: __init__.py  contact.py  health.py  market.py  message.py  metrics.py  webhook.py
trigger/25/app/services/: __init__.py  chat_service.py  conversation_service.py  lead_service.py  market_service.py  user_service.py  webhook_service.py
trigger/25/app/utils/: __init__.py  contact_profile.py  (+2 more)
trigger/25/prompts_override/: .gitkeep
trigger/25/scripts/: entrypoint.sh  init-databases.sh
trigger/25/tests/: conftest.py  test_ai.py  test_contact_profile.py  test_contacts_api.py  test_lead.py  test_market.py  test_memory.py  test_services.py  test_webhook.py
(+6107 files in other folders)
