[project]
name = "whatsapp-ai-agent"
version = "1.0.0"
description = "Personal WhatsApp AI assistant (offline auto-reply)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
